@@ -11,7 +11,11 @@
 
 package marvel.scriptTestRunner;
 
+import graph.Graph;
+import marvel.MarvelPaths;
+
 import java.io.*;
+import java.util.*;
 
 /**
  * This class implements a testing driver which reads test scripts from
@@ -19,14 +23,196 @@ import java.io.*;
  */
 public class MarvelTestDriver {
 
+    // ***************************
+    // ***  JUnit Test Driver  ***
+    // ***************************
+
+    /**
+     * String -> Graph: maps the names of graphs to the actual graph
+     **/
+    private final Map<String, Graph<String, String>> graphs = new HashMap<>();
+    private final PrintWriter output;
+    private final BufferedReader input;
+
     // Leave this constructor public
     public MarvelTestDriver(Reader r, Writer w) {
-        // TODO: Implement this, reading commands from `r` and writing output to `w`.
-        // See GraphTestDriver as an example.
+        input = new BufferedReader(r);
+        output = new PrintWriter(w);
     }
 
     // Leave this method public
-    public void runTests() {
-        // TODO: Implement this.
+    public void runTests() throws IOException {
+        String inputLine;
+        while((inputLine = input.readLine()) != null) {
+            if((inputLine.trim().length() == 0) ||
+                    (inputLine.charAt(0) == '#')) {
+                // echo blank and comment lines
+                output.println(inputLine);
+            } else {
+                // separate the input line on white space
+                StringTokenizer st = new StringTokenizer(inputLine);
+                if(st.hasMoreTokens()) {
+                    String command = st.nextToken();
+
+                    List<String> arguments = new ArrayList<>();
+                    while(st.hasMoreTokens()) {
+                        arguments.add(st.nextToken());
+                    }
+
+                    executeCommand(command, arguments);
+                }
+            }
+            output.flush();
+        }
+    }
+
+    private void executeCommand(String command, List<String> arguments) {
+        try {
+            switch(command) {
+                case "CreateGraph":
+                    createGraph(arguments);
+                    break;
+                case "AddNode":
+                    addNode(arguments);
+                    break;
+                case "AddEdge":
+                    addEdge(arguments);
+                    break;
+                case "ListNodes":
+                    listNodes(arguments);
+                    break;
+                case "ListChildren":
+                    listChildren(arguments);
+                    break;
+                default:
+                    output.println("Unrecognized command: " + command);
+                    break;
+            }
+        } catch(Exception e) {
+            String formattedCommand = command;
+            formattedCommand += arguments.stream().reduce("", (a, b) -> a + " " + b);
+            output.println("Exception while running command: " + formattedCommand);
+            e.printStackTrace(output);
+        }
+    }
+
+    private void createGraph(List<String> arguments) {
+        if(arguments.size() != 1) {
+            throw new CommandException("Bad arguments to CreateGraph: " + arguments);
+        }
+
+        String graphName = arguments.get(0);
+        createGraph(graphName);
+    }
+
+    private void createGraph(String graphName) {
+        Graph<String, String> graph = new Graph<>();
+        graphs.put(graphName, graph);
+        output.println("created graph " + graphName);
+    }
+
+    private void addNode(List<String> arguments) {
+        if(arguments.size() != 2) {
+            throw new CommandException("Bad arguments to AddNode: " + arguments);
+        }
+
+        String graphName = arguments.get(0);
+        String nodeName = arguments.get(1);
+
+        addNode(graphName, nodeName);
+    }
+
+    private void addNode(String graphName, String nodeName) {
+        Graph<String, String> graph = graphs.get(graphName);
+        graph.addNode(nodeName);
+        output.println("added node " + nodeName + " to " + graphName);
+    }
+
+    private void addEdge(List<String> arguments) {
+        if(arguments.size() != 4) {
+            throw new CommandException("Bad arguments to AddEdge: " + arguments);
+        }
+
+        String graphName = arguments.get(0);
+        String parentName = arguments.get(1);
+        String childName = arguments.get(2);
+        String edgeLabel = arguments.get(3);
+
+        addEdge(graphName, parentName, childName, edgeLabel);
+    }
+
+    private void addEdge(String graphName, String parentName, String childName,
+                         String edgeLabel) {
+        Graph<String, String> graph = graphs.get(graphName);
+        graph.addEdge(parentName, childName, edgeLabel);
+        output.println("added edge " + edgeLabel + " from " + parentName +
+                " to " + childName + " in " + graphName);
+    }
+
+    private void listNodes(List<String> arguments) {
+        if(arguments.size() != 1) {
+            throw new CommandException("Bad arguments to ListNodes: " + arguments);
+        }
+
+        String graphName = arguments.get(0);
+        listNodes(graphName);
+    }
+
+    private void listNodes(String graphName) {
+        Graph<String, String> graph = graphs.get(graphName);
+        Set<String> nodes = new TreeSet<>(graph.listNodes());
+        String nodeList = (graphName + " contains:");
+        for (String node : nodes) {
+            nodeList += " " + node;
+        }
+        output.println(nodeList);
+    }
+
+    private void listChildren(List<String> arguments) {
+        if(arguments.size() != 2) {
+            throw new CommandException("Bad arguments to ListChildren: " + arguments);
+        }
+
+        String graphName = arguments.get(0);
+        String parentName = arguments.get(1);
+        listChildren(graphName, parentName);
+    }
+
+    private void listChildren(String graphName, String parentName) {
+        Graph<String, String> graph = graphs.get(graphName);
+        List<String> nodes = new ArrayList<>(graph.listChildren(parentName));
+        Collections.sort(nodes);
+        String list = ("the children of " + parentName + " in " + graphName + " are:");
+        if (nodes.size() != 0) {
+            for (String node : nodes) {
+                Set<String> labels = graph.getLabel(parentName, node);
+                for (String label : labels) {
+                    list += " " + node + "(" + label + ")";
+                }
+            }
+        } else {
+            output.println();
+        }
+        output.println(list);
+    }
+
+    //TODO
+
+
+
+    /**
+     * This exception results when the input file cannot be parsed properly
+     **/
+    static class CommandException extends RuntimeException {
+
+        public CommandException() {
+            super();
+        }
+
+        public CommandException(String s) {
+            super(s);
+        }
+
+        public static final long serialVersionUID = 3495;
     }
 }
