@@ -1,3 +1,4 @@
 Briefly list any changes you made to your graph class during hw-marvel,
 and why you made those changes.
 
+I added (containsNode) to my graph class to be used in the MarvelPath.
